[metadata]
name = django-bKash_tokenized_chekout
version = 0.1
description = A Django app to integrate bKash tokenized checkout PGW product.
long_description = file: README.rst
url = https://www.example.com/
author = K.M. Abdullah-Al-Maruf
author_email = marufkhan600gm@gmail.com
license = The MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0.4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License #don't know what to place here
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0.4 